Polish report until page 3
Everything until (and including) page 3 is now ready for a submission.

--- a/report_template_dit348.tex
+++ b/report_template_dit348.tex
@@ -159,7 +159,7 @@ which the team has produced over the course of the sprint. It is, afterwards,
 delivered to the PO once the meeting has concluded.
 
 The process, by default, does not schedule any breaks; however, there is a
-possibility of a so-called \textit{emergency break} which can be called by any
+possibility of a so-called \textit{"emergency break"} which can be called by any
 team member at most once every 30 minutes. Breaks on an individual basis are
 allowed, but should not interfere with the team's progress. In a typical Scrum
 environment, stand-up meetings are held repeatedly and last for a short period,
@@ -184,71 +184,69 @@ was a viable choice for the first Lego Scrum Workshop. The team members perceive
 it as flexible enough to accommodate the needs of the team, while not being too
 rigid to hinder the team's progress \cite{DIT348A2}.
 
-The process has been followed in the desired manner described in
-Section~\ref{sec:process} very few deviations. The team used the process for
-the first time, allowing them to identify shortcomings (that are addressed in
-the following subsections) propose improvements, and highlight successful
-aspects. 
+The process has been followed in the desired manner (described in
+Section~\ref{sec:process}) with very few deviations. The process has
+been made use of for the first time, allowing the team to identify shortcomings
+(that are addressed in the following subsections) propose improvements, and
+highlight successful aspects. 
 
-Firstly, the team members agreed that initiating a sprint with a 
-\textbf{sprint planning} enabled them to have a clear understanding of the requirements
-that were to be worked on. Secondly, it was observed that merging the sprint
-review and retrospective into a \textbf{single meeting} was a logical choice.
-Usually, these meetings briefly covered team difficulties and progress.
-Skipping stand-up meetings was considered reasonable due to the small team size
-(six members), the short duration of the workshop (not exceeding four hours),
-and seamless communication among members in the same room. Remarkably, this
-approach, especially the last two points, proved highly effective, with no team
-member calling for \textit{"emergency breaks"}.
+Firstly, the team members agreed that initiating a sprint with a \textbf{sprint
+planning} enabled them to have a clear understanding of the requirements that
+were to be worked on. Secondly, it was observed that merging the sprint review
+and retrospective into a \textbf{single meeting} was a logical choice. Usually,
+these meetings briefly covered team difficulties and progress, hence no need to
+separate them into two meetings. Omitting stand-up meetings was considered
+reasonable due to the small team size (six members), the short duration of the
+workshop (not exceeding four hours), and seamless communication among
+participants, because all were present in the same room. Remarkably, our
+process, influenced by the points mentioned above, proved highly effective,
+with no team member calling for \textit{"emergency breaks"}.
 
-However, team members raised various concerns, which are explored in the
-following subsections along with references to relevant literature. Firstly, a
-lack of a sensible \textbf{Definition of Done} (abbreviated as DoD) was
-observed. Put simply, a DoD is a set of criteria points applied iteratively to
-each granular increment of a product to assure that the increment is of a
-desired quality \cite{Kopczynska2022} when considered to be \textit{done}. The
-DoD principle is a crucial component of the product's quality assurance, and,
-as Abrahamsson and Kautz \cite{Abrahamsson2002} point out, quality assurance
-incorporates an ability to identify defects as early as possible---this becomes
+However, team members identified various concerns which are explored in the
+following subsections with references to relevant literature. Firstly, a lack
+of a sensible \textbf{Definition of Done} (abbreviated as DoD) was observed.
+Put simply, a DoD is a set of criteria points applied iteratively to each
+granular increment of a product to assure that the increment is of a desired
+quality when considered to be \textit{done} \cite{Kopczynska2022}. The DoD
+principle is a crucial component of the product's quality assurance, and, as
+Abrahamsson and Kautz \cite{Abrahamsson2002} point out, quality assurance
+entails an ability to identify defects as early as possible---this becomes
 viably achievable with a well-defined DoD.
 
 The absence of a Definition of Done (DoD) can lead to an undesirable product
 quality and increased development costs. Additionally, it may cause
 misunderstandings between team members and the PO, hampering overall project
-progress. These (and other) claims are supported by a study conducted by
+progress. These (and other) observations are based on a study conducted by
 Kopczynska et al. \cite{Kopczynska2022}.
 
-Furthermore, during the second and third sprints, the team members \textbf{omitted
-assigning story points} to the user stories. This arose from the fact that the
-team members were so emerged in working on the individual user stories that
-they did not feel the need to assign story points to them. Undeniably, this
-might lead to a serious threat in a real-word project. As Abrahamsson and Kautz
-\cite{Abrahamsson2002} observe, it is a recurring issue that teams conduct improper
-estimations---in our case, the estimations were not made at all. If a certain
-risk (of any rather serious nature) were to occur, the lack of estimations
-would make it difficult (and in some cases impossible) to assess the impact of
-the risk on the project's progress.
+Furthermore, during the second and the third sprints, the team \textbf{omitted
+assigning story points} to user stories. This stemmed from team members being
+deeply engaged in working on individual user stories, leading them to skip
+assigning story points. Undeniably, this might lead to a serious threat in a
+real-word project. As Abrahamsson and Kautz \cite{Abrahamsson2002} observe, it
+is a recurring issue that teams conduct improper estimations---in our case, the
+estimations were not made at all. The absence of estimations, especially in the
+face of serious risks, would complicate and, in some cases, make it impossible
+to evaluate the impact on the project's progress.
 
-Lastly, it has been observed that the process did not entail any \textbf{cross-team
-communication efforts}. However, the nature of the Lego Scrum workshop was to
-produce a city environment with a set of buildings, where each team was
-responsible for one (or more) buildings. It is, in this case, unavoidable that
-the buildings are interconnected in some way, and, as a result, the teams were
-required to communicate with each other. This fact was not taken
-into account when designing the process, and proved to be a bottleneck for the
-team's progress. This is, in fact, not an issue specific to our endeavor,
-albeit a rather general problem. Larsson and Larsson \cite{Larsson2020}
-postulate that conducting cross-team collaborative approaches to lessen
-integration risks is unavoidable, and should not be disregarded in a
-high-quality process. Cater-Steel et al. \cite{CaterSteel2006} further
-emphasize the importance of cross-team communication by stating, quote,
-\textit{"[...] high quality external expertise is [even] more critical than top
-management support"}. Ultimately, a study conducted by Niazi et al. concludes
-that the lack of communication is one of the common SPI barriers that are
-encountered in practice \cite{Niazi2010}.
-It is thereby evident that the lack of cross-team communication poses a serious
-threat that should be addressed in the future stages of the maturity of the
-process.
+Lastly, it has been observed that the process did not mention any
+\textbf{cross-team communication efforts}. However, the nature of the Lego
+Scrum workshop was to produce a city environment with a set of buildings, where
+each team was responsible for one (or more) buildings. It is, in this case,
+unavoidable that the buildings are interconnected in some way, and, as a
+result, the teams were required to communicate with each other. This fact was
+not taken into account when designing the process and proved to be a bottleneck
+for the team's progress. This is, in fact, not an issue specific to our
+endeavor, albeit a rather general problem. Larsson and Larsson
+\cite{Larsson2020} postulate that conducting cross-team collaborative
+approaches to lessen integration risks is unavoidable, and should not be
+disregarded in any high-quality process. Cater-Steel et al.
+\cite{CaterSteel2006} further emphasize the importance of cross-team
+communication by stating, quote, \textit{"[...] high quality external expertise
+is more critical than top management support."} It is thereby evident that the
+lack of cross-team communication poses a serious threat which should be
+addressed if the process is to be used in the future iterations of the
+workshop.
 
 \begin{figure*}
 	\centering
@@ -264,63 +262,61 @@ process.
 % overview, see, e.g., \cite{Pettersson2008}). Describe each of them together
 % with at least one advantage and one disadvantage.
 
-In our ever-emerging world of software engineering, there is a plethora of SPI
-methods, models, and techniques that are available to the practitioners.
-Examples of some common SPI models include the Capability Maturity Model
-Integration (CMMI), the ISO/IEC 15504 standard, or a more lightweight approach,
-the iFLAP model \cite{Pettersson2008}, to name a few. In the following
-section, I will briefly describe some of the techniques that are introduced by
-iFLAP in relation to the process that was designed for the Lego Scrum workshop.
-CMMI and ISO/IEC 15504 are not discussed in this section, since our process is
-merely applicable for a small-scale project (with a defined time frame of not
-more than four hours), therefore, the aforementioned models may not be suitable
-for our endeavor.
+In our ever-emerging world of software, there is a plethora of SPI methods,
+models, and techniques that are available to practitioners. Examples of some
+common SPI models include the Capability Maturity Model Integration (CMMI), the
+ISO/IEC 15504 standard, or, a more lightweight approach, the iFLAP model
+\cite{Pettersson2008}. In this section, I will briefly describe some of the
+techniques that are introduced by iFLAP in relation to the process that was
+designed for the Lego Scrum workshop. CMMI and ISO/IEC 15504 are not discussed
+in this section, since our process is merely applicable to a small-scale
+project (with a defined time frame of no more than four hours). Thus, the
+aforementioned models may not be suitable for our endeavor.
 
 \textbf{{\fontfamily{qhv}\selectfont iFLAP}} is an inductive process assessment
-framework that largely incorporates the involvement of the practitioners in the
+framework that puts an emphasis on the involvement of practitioners in the
 assessment process \cite{Pettersson2008}, \cite{Malvius2009}. Its core
 principles are to: (i) construct a feasible selection of roles (and projects),
-(ii) gather data points, document them and triangulate the improvement issues,
-and (iii) construct an improvement plan based on the analyzed data, identify
-dependencies among the improvement issues, and prioritize them; these key
-principles (of iFLAP) are adapted from the summary provided by Pettersson et
-al. \cite{Pettersson2008}.
+(ii) gather data points, document them, and \textit{triangulate} the
+improvement issues by analyzing the data, and (iii) construct an improvement
+plan based on the analyzed data, identify dependencies among the improvement
+issues, and prioritize them. These key principles (of iFLAP) are adapted from a
+summary provided by Pettersson et al. \cite{Pettersson2008}.
 
 A central part of iFLAP is the selection of \textbf{roles} that are to be
-involved in the assessment process. This way, once the analysis of the gathered
-data is completed, the findings represent viewpoints of a broader spectrum
-which is beyond the team's level. Having applied such a technique to our
-process, we would, for instance, be able to obtain insights from the PO(s),
-team members, the instructor(s), other teams, scrum masters, and so forth. This
-would allow us to identify the shortcomings of the process from the perspective
-of different actors. As a result, the concern that was discussed, for instance,
-in Section~\ref{sec:experiences} about the lack of cross-team communication
-would inherently diminish, since the technique induces a need to communicate on
-a wider scale. While the technique appears rather straightforward, it does
-present several concerns. The role selection is a time-consuming process and,
-consequently, might hinder the progress of the project. Additionally, biases
-may influence the role selection, and thus the assessment findings may provide
-inaccurate and unreliable outcomes.
+involved in the assessment process. This way, once the analysis is completed,
+the findings represent viewpoints of a broader spectrum of actors, and the
+viewpoints are not limited to the team only. Having applied this technique to
+our process, we would be able to obtain additional insights from, for instance,
+the PO(s), the instructor(s), other teams, scrum masters, and so forth. This
+would allow us to identify any shortcomings of the process from different
+perspectives. Consequently, the concern discussed in
+Section~\ref{sec:experiences} about the lack of cross-team communication would
+naturally diminish, as the technique encourages broader communication. While
+the technique itself appears rather straightforward, it does present several
+limitations. The role selection is a time-consuming process and might hinder
+the progress of the project. Additionally, biases and other human factors may
+influence the role selection. Thus, the assessment findings may provide
+unreliable outcomes.
 
 Furthermore, iFLAP suggests to \textbf{gather data} from the selected roles
-with the help of interviews and questionnaires. This would allow us to obtain
-a more detailed overview of the issues that were encountered during the collective
-effort. However, similar to the previous technique, the primary limitation of
-this technique is the time that is required to gather the data. Interviews, on
-a general note, do provide valuable insights into the issues at hand, albeit
-they tend to be lengthy and time-consuming. Questionnaires, on the other hand,
-are relatively easy and quick to conduct, but they do not provide as much
-detail as interviews do. On the contrary, an analysis of a questionnaire
-becomes feasible with the help of automated tools or scripts that can be
-written by any general-purpose programming language (e.g., Python, Julia,
-etc.). Nevertheless, having applied this technique to our process, we could
-leverage the gathered data to enhance the process in the future stages of its
-maturity. For instance, we could identify a new strategy on how a DoD is to be
-modeled, or, perhaps, we could identify a new technique to estimate the user
-stories.
+with the help of interviews or questionnaires. This would allow the team to
+strengthen the process by identifying issues in a more systematic manner.
+However, similar to the previous technique, the primary limitation is the time
+that is required to gather the data. Interviews, on a general note, provide
+valuable insights into the issues at hand, albeit they tend to be
+time-consuming and tedious. Questionnaires, on the other hand, are relatively
+easy and quick to conduct, but they do not provide as much detail as interviews
+do. Luckily, an analysis of a questionnaire becomes feasible with the help of
+automated tools or scripts that can be written by any general-purpose
+programming language (e.g., Python, Julia, etc.). Nevertheless, having applied
+this technique to our process, we could leverage the gathered data to enhance
+the process in the future stages of its maturity. For instance, we could
+identify a new strategy on how a DoD is to be modeled, or, perhaps, we could
+introduce a new technique to estimate user stories.
 
 Ultimately, iFLAP further recommends to identify \textbf{dependencies between
-improvement issues} as well as \textit{"package"} the improvement issues into
+improvement issues}, as well as \textit{"package"} the improvement issues into
 improvement areas \cite{Pettersson2008}, \cite{Malvius2009}. For instance, the
 lack of a DoD is an improvement issue and corresponds to an improvement area of
 \textit{quality assurance}. The identification of such dependencies allows the
@@ -330,10 +326,10 @@ a successful resolution of another issue, or, at least, provide an indication
 of how to resolve the latter issue. This technique, under general
 circumstances, is not too demanding to realize. However, an extensive domain
 knowledge is required to be able to draw dependencies between the improvement
-issues, and, in a larger-scale project, this becomes resource-intensive
+issues, and, in a larger-scale project, this becomes a challenging task
 \cite{Pettersson2008}. Though, in our case, the technique is relevant and
-feasible to implement---it must be, however, assumed that the team members have
-a sufficient understanding of the domain, so that dependencies can be drawn
+feasible to implement---it must be, however, assumed that team members have a
+sufficient understanding of the domain, so that dependencies can be drawn
 between the improvement issues in a sensible manner.
 
 % Relate each of those methods/models/techniques to the problems you
@@ -350,9 +346,9 @@ between the improvement issues in a sensible manner.
 % define questions and metrics you connect to those goals.
 
 In this section, the {\fontfamily{qhv}\selectfont GQM} tool is utilized as part
-of the SPI proposal, and is adapted from the assignments of the course that
-the team worked on, notably \cite{DIT348A3}, \cite{DIT348A4}. Basili et al.
-\cite{Caldiera1994} define CQM as an approach which underscores the
+of the SPI proposal. The analysis extends the work the team conducted in the
+assignments of the course, notably \cite{DIT348A3}, \cite{DIT348A4}. Basili et
+al. \cite{Caldiera1994} define GQM as an approach which underscores the
 importance of organizations defining their \textbf{goals}, linking them to
 operational data, and establishing a framework for data interpretation in order
 to \textbf{measure purposefully} their progress towards the goals. It was
